# twit-off-pt5-fastAPI

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  web_app.db
migrations/versions/: 0189dd23c4af_.py  23dc6711f269_.py  4ae1f57993b2_.py  4cc0adbb74fe_.py  b41df0ad8476_.py
tests/: test_twit_off_pt5.py
twit_off_pt5/: __init__.py  models.py
twit_off_pt5/core/: models.py  pydantic_models.py  security.py
twit_off_pt5/routes/: admin_routes.py  book_routes.py  home_routes.py  stats_routes.py  twitter_routes.py
twit_off_pt5/services/: basilica_service.py  twitter_service.py
twit_off_pt5/templates/: books.html  layout.html  new_book.html  predict_form.html  reset.html  results.html  user.html  user_form.html
