[tool.poetry]
name = "twit-off-pt5"
version = "0.1.0"
description = ""
authors = ["Erik Seguinte <erikseguinte@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
python-dotenv = "^0.13.0"
requests = "^2.23.0"
basilica = "^0.2.8"
tweepy = "^3.8.0"
passlib = "^1.7.2"
sklearn = "^0.0"
si = "^0.1.1"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
fastapi = {extras = ["all"], version = "^0.58.0"}
databases = {extras = ["postgresql"], version = "^0.3.2"}
alembic = "^1.4.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
